--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emmanuel Lucius Blog Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
+    <title>Emmanuel Lucius' Blog Portfolio Tutorial</title>
   </head>
   <body>
-    <h1>Changing the world</h1>
+    <nav>
+      <div class='flex-space-btw'>
+        <a class="centered logo">Lucius<img src="images/icon.svg" class="icon"></img></a>
+        <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
+      </div>
+    </nav>
   </body>
 </html>
