--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@
         <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
       </div>
     </nav>
+    <div class='container'>
+      <section class='grid aboutSection'>
+        <div class='centered'>
+          <div>
+            <h2>Hi, I'm Emmanuel Lucius</h2>
+            <p class='paragraph'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
+              using modern technologies for both front and back-facing (database driven) applications. Currently making lives better at 
+             <a href="#" class="accentColor">QuomodoSystems
+               <img src="images/linkIcon.svg" class="icon"></img>
+             </a>
+           </p>
+          </div>
+        </div>
+        <div class='aboutImg backgroundFix' style="background-image: url(images/aboutImg.png)"></div>
+      </section>
+    </div>
   </body>
 </html>
