--- a/index.html
+++ b/index.html
@@ -26,15 +26,50 @@
         <div class='centered'>
           <div>
             <h2>Hi, I'm Emmanuel Lucius</h2>
-            <p class='paragraph'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
+            <p class='paragraph bold'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
               using modern technologies for both front and back-facing (database driven) applications. Currently making lives better at 
-             <a href="#" class="accentColor">QuomodoSystems
+             <a href="#" class="accentColor bold">QuomodoSystems
                <img src="images/linkIcon.svg" class="icon"></img>
              </a>
            </p>
           </div>
         </div>
         <div class='aboutImg backgroundFix' style="background-image: url(images/aboutImg.png)"></div>
+      </section>
+    </div>
+    <div class='container experienceSection'>
+      <section >
+        <h2>Experience</h2>
+        <div class='flex-wrap'>
+          <div>
+            <a href="#" class="accentColor bold">QuomodoSystems
+              <img src="images/linkIcon.svg" class="icon"></img>
+            </a>
+            <p>Web Development</p>
+            <p>2020 - present</p>
+          </div>
+          <div>
+            <a href="#" class="accentColor bold">QuomodoSystems
+              <img src="images/linkIcon.svg" class="icon"></img>
+            </a>
+            <p>Web Development</p>
+            <p>2020 - present</p>
+          </div>
+          <div>
+            <a href="#" class="accentColor bold">QuomodoSystems
+              <img src="images/linkIcon.svg" class="icon"></img>
+            </a>
+            <p>Web Development</p>
+            <p>2020 - present</p>
+          </div>
+          <div>
+            <a href="#" class="accentColor bold">QuomodoSystems
+              <img src="images/linkIcon.svg" class="icon"></img>
+            </a>
+            <p>Web Development</p>
+            <p>2020 - present</p>
+          </div>
+        </div>
       </section>
     </div>
   </body>
