--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
@@ -15,18 +13,18 @@
     <title>Emmanuel Lucius' Blog Portfolio Tutorial</title>
   </head>
   <body>
-    <nav>
+    <nav class='padChild'>
       <div class='flex-space-btw'>
         <a class="centered logo">Lucius<img src="images/icon.svg" class="icon"></img></a>
         <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
       </div>
     </nav>
     <div class='container'>
-      <section class='grid aboutSection'>
+      <section class='grid2 aboutSection'>
         <div class='centered'>
           <div>
             <h2>Hi, I'm Emmanuel Lucius</h2>
-            <p class='paragraph bold'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
+            <p class='paragraph'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
               using modern technologies for both front and back-facing (database driven) applications. Currently making lives better at 
              <a href="#" class="accentColor bold">QuomodoSystems
                <img src="images/linkIcon.svg" class="icon"></img>
@@ -76,7 +74,7 @@
     <div class='container portfolio-section'>
       <section >
         <h2>Portfolio</h2>
-        <div class='grid'>
+        <div class='grid3'>
           <a href="#">
               <div class="portfolio-image backgroundFix" style='background-image: url(https://picsum.photos/id/57/400/400)'>
                 
@@ -124,5 +122,11 @@
         </div>
       </section>
     </div>
+    <footer class='padChild'>
+      <div class='flex-space-btw'>
+        <a class="centered logo">Lucius<img src="images/icon.svg" class="icon"></img></a>
+        <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
+      </div>
+    </footer>
   </body>
 </html>
