--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Emmanuel Lucius' Blog Portfolio Tutorial</title>
   </head>
   <body>
-    <nav class='padChild'>
+    <nav class='padChild topHeader'>
       <div class='flex-space-btw'>
         <a class="centered logo">Lucius<img src="images/icon.svg" class="icon"></img></a>
         <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
@@ -24,9 +24,9 @@
         <div class='centered'>
           <div>
             <h2>Hi, I'm Emmanuel Lucius</h2>
-            <p class='paragraph'>I am a professional web developer and designer with 3+ years of experience building small to large scale web applications
+            <p class='paragraph'>I am a professional Software Engineer and designer with <script>document.write(new Date().getFullYear() - 2013)</script>+ years of experience building small to large scale web applications
               using modern technologies for both front and back-facing (database driven) applications. Currently making lives better at 
-             <a href="#" class="accentColor bold">QuomodoSystems
+             <a href="#" class="accentColor bold">Microsoft
                <img src="images/linkIcon.svg" class="icon"></img>
              </a>
            </p>
@@ -40,32 +40,32 @@
         <h2>Experience</h2>
         <div class='flex-wrap'>
           <div>
-            <a href="#" class="accentColor bold">QuomodoSystems
+            <a href="#" class="accentColor bold">Microsoft
               <img src="images/linkIcon.svg" class="icon"></img>
             </a>
-            <p>Web Development</p>
+            <p>Frontend Engineer (WEB3 || Metaverse)</p>
             <p>2020 - present</p>
           </div>
           <div>
-            <a href="#" class="accentColor bold">QuomodoSystems
+            <a href="#" class="accentColor bold">Google
               <img src="images/linkIcon.svg" class="icon"></img>
             </a>
-            <p>Web Development</p>
-            <p>2020 - present</p>
+            <p>Backend Engineer (C# || .NET Core)</p>
+            <p>2017 - 2020</p>
           </div>
           <div>
-            <a href="#" class="accentColor bold">QuomodoSystems
+            <a href="#" class="accentColor bold">Trello
               <img src="images/linkIcon.svg" class="icon"></img>
             </a>
-            <p>Web Development</p>
-            <p>2020 - present</p>
+            <p>Product Designer (Figma)</p>
+            <p>2015 - 2017</p>
           </div>
           <div>
-            <a href="#" class="accentColor bold">QuomodoSystems
+            <a href="#" class="accentColor bold">My-Backyard
               <img src="images/linkIcon.svg" class="icon"></img>
             </a>
-            <p>Web Development</p>
-            <p>2020 - present</p>
+            <p>Web Development (React.js)</p>
+            <p>2013 - 2015</p>
           </div>
         </div>
         <a href="#" class="accentColor bold resume">View Resume<img src="images/linkIcon.svg" class="icon"></img></a>
@@ -75,8 +75,8 @@
       <section >
         <h2>Portfolio</h2>
         <div class='grid3'>
-          <a href="#">
-              <div class="portfolio-image backgroundFix" style='background-image: url(https://picsum.photos/id/57/400/400)'>
+          <a href="https://unsplash.com/@markusspiske">
+              <div class="portfolio-image backgroundFix" style='background-image: url(images/porto1.jpg)'>
                 
               </div>
               <h3 class="bold">Rise Ecommerce Web-App</h3>
@@ -97,8 +97,8 @@
                 ad animi 
               </p>
             </a>
-          <a href="#">
-              <div class="portfolio-image backgroundFix" style='background-image: url(https://picsum.photos/id/23/400/400)'>
+          <a href="https://unsplash.com/@ale_s_bianchi">
+              <div class="portfolio-image backgroundFix" style='background-image: url(images/porto3.jpg)'>
                 
               </div>
               <h3 class="bold">Rise Ecommerce Web-App</h3>
@@ -122,7 +122,7 @@
         </div>
       </section>
     </div>
-    <footer class='padChild'>
+    <footer class='padChild topHeader'>
       <div class='flex-space-btw'>
         <a class="centered logo">Lucius<img src="images/icon.svg" class="icon"></img></a>
         <a href='mailto:lucius.emmanuel.e@gmail.com' class='centered'>lucius.emmanuel.e@gmail.com <img src='images/linkIcon.svg' class='icon'></img></a>
